# auto_claude_code

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  mannual.md  pyproject.toml
scripts/: init.sh
src/vibe/: __init__.py  __main__.py  analyzer.py  approval.py  config.py  dashboard.html  history.py  loop.py  manager.py  server.py  task.py  worker.py  worktree.py
src/vibe/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/vibe/frontend/src/: App.vue
src/vibe/frontend/src/api/: client.ts
src/vibe/frontend/src/components/: ApprovalCard.vue  ApprovalModal.vue  ConfigPanel.vue  ExecutionList.vue  KanbanBoard.vue  KanbanCard.vue  LogPanel.vue  MarkdownView.vue  ResultView.vue  StatsBar.vue  TaskDetail.vue  TaskForm.vue  WorkerCard.vue
src/vibe/frontend/src/composables/: useApprovals.ts  useConfig.ts  useExecutions.ts  useLogs.ts  useTasks.ts  useWorkers.ts
src/vibe/frontend/src/styles/: theme.css
src/vibe/frontend/src/views/: ConfigView.vue  HistoryView.vue  WorkersView.vue
src/vibe/templates/: PROGRESS.md
tasks/: example.md
templates/: CLAUDE.md  PROGRESS.md
tests/: conftest.py  test_analyzer.py  test_approval.py  test_approval_feedback.py  test_config.py  test_history.py  test_loop.py  test_main.py  test_manager.py  test_server.py  test_task.py  test_worker.py  test_worktree.py
