[project]
name = "auto-claude-code"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "httpx>=0.28"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.vibe]
task_dir = "tasks"
auto_commit = true
